kubernetes/kenobi/database/templates/mariadb/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: mariadb

spec:
  gateways:
    - istio-ingress/feldman-in
  hosts:
    - mariadb.feldman.in
  tcp:
    - match:
        - port: 3306
      route:
        - destination:
            host: mariadb.database.svc.cluster.local
            port:
              number: 3306
